process/test_bestbuy_scraping/20260118_133102/execution_log.txt
[2026-01-18 13:31:02] STARTING: C:\Users\admin\Documents\work\Shark-Ninja\Scraping\Automation\Scheduler\Python-Script-Runner-main\threads\BestBuy_US\input - Sheet1.csv
[2026-01-18 13:31:02] CWD: C:\Users\admin\Documents\work\Shark-Ninja\Scraping\Automation\Scheduler\Python-Script-Runner-main\process\test_bestbuy_scraping\20260118_133102
  File "C:\Users\admin\Documents\work\Shark-Ninja\Scraping\Automation\Scheduler\Python-Script-Runner-main\threads\BestBuy_US\input - Sheet1.csv", line 2
    Bestbuy_DB301CCY_Ninja BlendBOSS_US,https://www.bestbuy.com/product/ninja-blendboss-tumbler-blender-with-26oz-travel-tumbler-cyberspace/JXJVXL2WKP
                                                                                                              ^
SyntaxError: invalid decimal literal

[2026-01-18 13:31:02] FILTERED WITH RETURN CODE: 1
----------------------------------------
